# mayasec

./: .gitignore
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_etapa3.py  0003_users.py  0004_materials.py  0005_welcome_menu.py  0006_playbook.py  0007_assistant_name.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  contact.py  conversation.py  handoff.py  knowledge_base.py  material.py  message.py  mixins.py  tenant.py  tool_config.py  user.py  whatsapp_session.py
backend/app/routers/: admin.py  auth.py  panel.py  webhook.py
backend/app/schemas/: webhook.py
backend/app/services/: agent_service.py  ai_text.py  client_api.py  contact_identity.py  conversation_service.py  doc_import.py  faq_import.py  gemini_client.py  openai_client.py  pilates_sync.py  signature.py  whatsapp_service.py
backend/app/services/tools/: __init__.py  _helpers.py  base.py  confirmar_presenca.py  consultar_agenda.py  consultar_contrato.py  consultar_faturas.py  enviar_arquivo.py  enviar_boleto.py  enviar_material.py  registrar_handoff.py  salvar_arquivo.py
deploy/: README.md  mayasec-backend.service  mayasec-frontend.service
frontend/: .env.local.example  middleware.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/login/: page.tsx
frontend/components/: ui.tsx
frontend/lib/: api.ts  auth.ts
(+6 files in other folders)
